# thesis

./: .gitignore  Cargo.toml  README.md
benchmarks/: README.md  index.js  package.json  tests.js
benchmarks/benchmark/results/: additions.chart.html  additions.json  crdt-size.json  delta-size.json  merges.chart.html  merges.json
benchmarks/contenders/: automerge.js  base.js  shelf-aware.js  yjs.js
crdt-playground/: Cargo.toml  README.md
crdt-playground/src/: main.rs
networking/: Cargo.toml  README.md
networking/src/: crdt_doc.rs  lib.rs  main.rs
shelf-crdt/: Cargo.toml  README.md
shelf-crdt-macros/: Cargo.toml  README.md
shelf-crdt-macros/src/: lib.rs
shelf-crdt-macros/tests/: example.rs  tests.rs
shelf-crdt/assets/: shelf_tests.json
shelf-crdt/src/: adjacent_crdt.rs  clock.rs  decoder.rs  dot_kernel.rs  encoder.rs  json.rs  lib.rs  security_sim.rs  shelf_fuzzer.rs  state_vector.rs  temporal.rs  traits.rs  wrap_crdt.rs
shelf-js/: Cargo.toml  LICENSE_MIT  README.md
shelf-js/src/: awareness.rs  fuzzer.rs  lib.rs  secure_shelf.rs  shelf.rs
