[package]
name = "crdt-playground"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
nannou = "0.18.1"
networking = { path = "../networking" }
serde_json = "1.0.79"
shelf-crdt = {path = "../shelf-crdt"}


