[package]
name = "shelf-crdt-macros"
version = "0.1.0"
edition = "2021"
publish = false
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
quote = "1.0.18"
serde ={ version = "1.0.137", features = ["derive"]}
syn = "1.0.92"
shelf-crdt = {path ="../shelf-crdt"}

[[test]]
name = "tests"
path = "tests/tests.rs"


